new version 4 alpha changes