@@ -8,31 +8,28 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
-public class Clear extends SubCmd {
-    public Clear(ItemFoodCommand itemFoodCommand) {
-        super("clear", itemFoodCommand, true, true);
+public class Reset extends SubCmd {
+    public Reset(ItemFoodCommand itemFoodCommand) {
+        super("reset", itemFoodCommand, true, true);
     }
 
     @Override
     public void onCommand(@NotNull CommandSender sender, @NotNull String alias, String[] args) {
         Player player = (Player) sender;
         ItemBuilder builder = new ItemBuilder(getItemInHand(player)).clearFoodComponent();
-        if (!VersionUtils.isVersionAfter(1, 21, 4)) {
-            builder.clearFoodComponent();
-            setItemInHand(player, builder.build());
+        if (!VersionUtils.isAfter(1, 21, 4)) {
+            setItemInHand(player, builder.clearFoodComponent().build());
         } else {
-            builder.clearFoodComponent();
-            builder.clearConsumableComponent();
-            setItemInHand(player,builder.build());
+            setItemInHand(player, builder.clearFoodComponent().clearConsumableComponent().build());
         }
+        onSuccess(player);
         updateView(player);
     }
 
     @Override
     public List<String> onComplete(@NotNull CommandSender sender, String[] args) {
-        return Collections.emptyList();
+        return List.of();
     }
 }
